--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Simple Interest Calculator</h1>
 
         Amount <input type="number"  id="principal" onchange="validateAmt()">  <br><br>
-        Rate <input type="number"  id="rate" min="1" max="20" step="0.25" value="10.25"> <br><br>
+  <!--  Rate <input type="number"  id="rate" min="1" max="20" step="0.25" value="10.25" onchange="updateRate()"> <br><br> -->
         No. of Years <select id="years" name="years">
             <option value="1">1</option>
             <option value="2">2</option>
@@ -24,7 +24,7 @@
             <option value="10">10</option>
         </select> <br><br>
 
-        Interest : <input type="range" id="rate" name="rate" min="minval" max="maxval" value="default_val" onchange="updateRate()">
+        Interest : <input type="range" id="rate" name="rate" min="1" max="20" value="10.25%" onchange="updateRate()">
         <span id="rate_val">
             10.25%
         </span>
