--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal" onchange="validateAmt()">  <br><br>
+        Amount: <input type="number"  id="principal" onchange="validateAmt()">  <br><br>
   <!--  Rate <input type="number"  id="rate" min="1" max="20" step="0.25" value="10.25" onchange="updateRate()"> <br><br> -->
-        No. of Years <select id="years" name="years">
+        No. of Years: <select id="years" name="years">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -24,7 +24,7 @@
             <option value="10">10</option>
         </select> <br><br>
 
-        Interest : <input type="range" id="rate" name="rate" min="1" max="20" value="10.25%" onchange="updateRate()">
+        Interest: <input type="range" id="rate" name="rate" min="1" max="20" value="10.25%" onchange="updateRate()">
         <span id="rate_val">
             10.25%
         </span>
@@ -36,7 +36,7 @@
         </span>
 <br><br>
         <footer>
-            &#169; This Calculator belongs to Bencoder.
+            &#169; Everyone Can Get Rich.
         </footer>
         </div>
     </body>
